<!--
  ~ Skill India
  ~ Copyright (C) 2017  e-LEMON-ators
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Skill India</string>

    <string name="dashboard">Dashboard</string>
    <string name="learner">Learner</string>
    <string name="trainer">Trainer</string>
    <string name="training_partner">Training Partner</string>

    <string name="learner_description">Enroll into courses and develop your skills</string>
    <string name="trainer_description">Enroll into courses and develop your skills</string>
    <string name="training_partner_description">Enroll into courses and develop your skills</string>
    <string name="contribute_csr_description">Enroll into courses and develop your skills</string>

    <string name="dashboard_learner_setup">Setup a Learner account</string>
    <string name="dashboard_trainer_setup">Setup a Trainer account</string>
    <string name="dashboard_training_partner_setup">Setup a Training Partner account</string>
    <string name="dashboard_setup_register">Register</string>

    <string name="drawer_item_log_out">Log Out</string>

    <string name="help_intro">Welcome. Just tap on the circle to get help.</string>

    <string name="menu_help">Help</string>
    <string name="menu_english">English</string>
    <string name="menu_hindi">Hindi</string>
    <string name="menu_tamil">Tamil</string>
    <string name="menu_sort_rating">Sort by Rating</string>
    <string name="menu_sort_distance">Sort by Distance</string>
    <string name="menu_sort_course_fee">Sort by Course Fee</string>
    <string name="menu_map">Map</string>

    <string name="intro2_heading">Are you an avid learner?</string>
    <string name="intro2_description">Then we\'ve got your back!</string>

    <string name="intro3_heading">Wish to make a change?</string>
    <string name="intro3_description">Come join hands with us!</string>

    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="aadhaar">Aadhaar No</string>
    <string name="department">Department</string>
    <string name="year">Year</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">REGISTER</string>

    <string name="state_spinner_label">State</string>
    <string name="district_spinner_label">District</string>
    <string name="sector_spinner_label">Sector</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_sign_in_response">Unknown response from Auth sign-in</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="title_activity_hello">Hello.</string>
    <string name="hello_activity_headline">Hello.</string>
    <string name="hello_activity_terms">Terms of Use</string>
    <string name="hello_activity_subhead">We just need a few quick things before getting you started.</string>
    <string name="hello_activity_type">Type of Account</string>
    <string name="hello_activity_name">Name</string>
    <string name="hello_activity_mobile">Mobile No.</string>
    <string name="hello_activity_address">Address</string>
    <string name="hello_activity_state">State</string>
    <string name="hello_activity_district">District</string>
    <string name="hello_activity_gender">Gender</string>
    <string name="hello_activity_age">Age</string>
    <string name="hello_activity_email">Email</string>
    <string name="hello_activity_password">Password</string>
    <string name="hello_activity_age_invalid">Please enter a valid age.</string>

    <string name="hello_activity_share_data">Share anonymous data for research.</string>
    <string name="hello_activity_hint_settings">You can change these in settings later.</string>
    <string name="hello_activity_button_next">NEXT</string>
    <string name="hello_activity_textview_tos">By using Skill India, you are agreeing to the</string>
    <string name="hello_activity_button_start">GET STARTED</string>

    <string name="title_activity_switch">SwitchActivity</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_item_search_courses">Search Training Courses</string>
    <string name="drawer_item_search_center">Search Training Center</string>
    <string name="drawer_item_webinars">Webinars</string>
    <string name="drawer_item_check_progress">Check Progress</string>
    <string name="drawer_item_schedule">View Schedule</string>
    <string name="drawer_item_world_competition">World Skills Competition</string>
    <string name="drawer_item_report_issues">Report Issues</string>
    <string name="drawer_item_contact_trainer">Contact Trainer</string>

    <string name="drawer_item_upload_webinars">Upload Webinars</string>
    <string name="drawer_item_contact_training_center">Contact Training Center</string>
    <string name="drawer_item_update_skill_set">Update Skill Set</string>

    <string name="drawer_item_setup_training_center">Setup Training Center</string>
    <string name="drawer_item_manage_trainers">Manage Trainers</string>
    <string name="drawer_item_enroll_learner_pmkvy">Enroll Learner under PMKVY</string>
    <string name="drawer_item_become_nsdc_partner">Become a NSDC Partner</string>

    <string name="drawer_item_contribute_csr">Contribute CSR Funds</string>

    <string name="search_no_training_centers">No training centers found</string>

    <string name="name_organization">Name of Organization</string>
    <string name="type_of_agreement">Type of Agreement</string>
    <string name="sector_targeted">Sector Targeted</string>
    <string name="amount">Amount</string>
    <string name="EMAIL">Email</string>
    <string name="objective">Objective</string>
    <string name="csr_submit">SUBMIT</string>

    <string-array name="type_of_agreement">
        <item>Bipartite</item>
        <item>Tripartite</item>
    </string-array>

    <string-array name="sector">
        <item>Agriculture</item>
        <item>Banking and funding</item>
    </string-array>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="sector_agriculture">Agriculture</string>
    <string name="sector_auto">Auto and Auto Components</string>
    <string name="sector_furniture">Furniture and Furnishings</string>
    <string name="sector_gems">Gems and Jewellery</string>
    <string name="sector_handloom">Handloom and Handicrafts</string>
    <string name="sector_media">Media and Entertainment</string>
    <string name="sector_plumbing">Plumbing</string>
    <string name="sector_softskill">Soft Skill and English Communication</string>
    <string name="sector_telecom">Telecom</string>
    <string name="sector_textile">Textile and Clothing</string>

    <string name="course_animal_husbandry">Animal Husbandry</string>
    <string name="course_beekeeper">Bee Keeper</string>
    <string name="course_cottoncultivator">Cotton Cultivator</string>
    <string name="course_paddyfarmer">Paddy Farmer</string>
    <string name="course_poultryfarming">Poultry Farming</string>
    <string name="course_dairyworker">Dairy Worker</string>

    <string name="sector_agriculture_actionbar">Agriculture Courses</string>
    <string name="course_animalhusbandry_actionbar">Animal Husbandry Course</string>

</resources>
