<!--
  ~ Skill India
  ~ Copyright (C) 2017  e-LEMON-ators
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline"
        android:orderInCategory="100"
        android:title="@string/menu_help"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_englis"
        android:icon="@drawable/ic_help_outline"
        android:orderInCategory="100"
        android:title="@string/menu_english"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hindi"
        android:icon="@drawable/ic_help_outline"
        android:orderInCategory="200"
        android:title="@string/menu_hindi"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tamil"
        android:icon="@drawable/ic_help_outline"
        android:orderInCategory="300"
        android:title="@string/menu_tamil"
        app:showAsAction="never" />
</menu>
